# resume_bi

./: .env-exemplo  .gitignore  docker-compose.yml  pdf_copy.sh  pyproject.toml  requirements-dev.txt  requirements.in  requirements.txt
docs/: commands.md
resume_bi/: app.py
resume_bi/src/: google_drive.py  resume_cv.py
