[tool.poetry]
name = "resume-bi"
version = "0.1.0"
description = ""
authors = ["jorgemaciel <jorge.maciel.jr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
ipdb = "^0.13.13"
black = "^24.3.0"
flake8 = "^7.0.0"
pytest-order = "^1.2.1"
jupyter = "^1.0.0"
lab = "^8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
